# SyntacticHeap.rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  parser.rs
tests/: braces.rs  lambda_calculus.rs  lists.rs  terms.rs
